Unthreaded part converted to ProcessBuilder